Name:                netlink
Version:             0.1
Synopsis:            Netlink communication for Haskell
Description:         Library to comminicate with Linux kernel via Netlink
Homepage:            http://netlink-hs.googlecode.com/
License:             BSD3
License-file:        LICENSE
Author:              David Anderson
Maintainer:          Max Treskin <mtreskin@metachord.com>
Copyright:           Google Inc. 2010
Stability:           Alpha
Category:            System
Build-type:          Simple
Cabal-version:       >=1.6

Source-repository head
  type:       git
  location:   https://github.com/metachord/netlink-hs

Library
  Exposed-modules:   System.Linux.Netlink
                     System.Linux.Netlink.Constants
                     System.Linux.Netlink.Route
                     System.Linux.Netlink.Helpers
                     System.Linux.Netlink.GeNetlink
                     System.Linux.Netlink.GeNetlink.Constants
                     System.Linux.Netlink.GeNetlink.Control
                     System.Linux.Netlink.GeNetlink.NL80211
                     System.Linux.Netlink.GeNetlink.NL80211.Constants
  Other-modules:     System.Linux.Netlink.C
  Build-depends:     base >=4 && <5,
                     bytestring >=0.9,
                     cereal >=0.3,
                     containers >=0.3,
                     monad-loops >=0.3,
                     unix >=2.4
  Build-tools:       c2hs > 0.16
  Ghc-options:       -Wall -fwarn-tabs
  Ghc-prof-options:  -auto-all
