Name:                netlink
Version:             1.0.0.4
Synopsis:            Netlink communication for Haskell
Description:         Library to comminicate with Linux kernel via Netlink
Homepage:            https://github.com/Ongy/netlink-hs
License:             BSD3
License-file:        LICENSE
Author:              David Anderson
Maintainer:          Markus Ongyerth <ongy@ongy.net>
Copyright:           Google Inc. 2010
Stability:           Alpha
Category:            System
Build-type:          Simple
Cabal-version:       >=1.10

Source-repository head
  type:       git
  location:   https://github.com/Ongy/netlink-hs


{- Uncomment to build the generator executables
executable generate
  hs-source-dirs: Scripts
  main-is: Generate.hs
  default-language: Haskell2010
  ghc-options: -Wall -O2
  other-modules: Helpers
  build-depends: base,
                 containers,
                 process,
                 language-c,
                 regex-pcre

executable generategenl
  hs-source-dirs: Scripts
  main-is: GenerateGenl.hs
  default-language: Haskell2010
  ghc-options: -Wall -O2
  other-modules: Helpers
  build-depends: base,
                 containers,
                 process,
                 language-c,
                 regex-pcre

executable generatenl80211
  hs-source-dirs: Scripts
  main-is: GenerateNL80211.hs
  default-language: Haskell2010
  ghc-options: -Wall -O2
  other-modules: Helpers
  build-depends: base,
                 containers,
                 process,
                 language-c,
                 regex-pcre
-}

executable dump_nl80211
  hs-source-dirs: Utils
  main-is: DumpNL80211.hs
  build-depends: base >=4.6 && <5,
                 netlink
  default-language: Haskell2010
  ghc-options: -Wall -O2

executable genlinfo
  hs-source-dirs: Utils
  main-is: GenlInfo.hs
  build-depends: base >=4.6 && <5,
                 netlink
  default-language: Haskell2010
  ghc-options: -Wall -O2

executable dump_rtnetlink
  hs-source-dirs: Utils
  main-is: DumpRTNL.hs
  build-depends: base >=4.6 && <5,
                 netlink
  default-language: Haskell2010
  ghc-options: -Wall -O2


Library
  Exposed-modules:   System.Linux.Netlink
                     System.Linux.Netlink.Constants
                     System.Linux.Netlink.Route
                     System.Linux.Netlink.Helpers
                     System.Linux.Netlink.GeNetlink
                     System.Linux.Netlink.GeNetlink.Constants
                     System.Linux.Netlink.GeNetlink.Control
                     System.Linux.Netlink.GeNetlink.NL80211
                     System.Linux.Netlink.GeNetlink.NL80211.Constants
  Other-modules:     System.Linux.Netlink.C
  default-language: Haskell2010
  Build-depends:     base >=4 && <5,
                     bytestring >=0.9,
                     cereal >=0.3,
                     containers >=0.3,
                     monad-loops >=0.3,
                     unix >=2.4,
                     pretty-hex
  Ghc-options:       -Wall -fwarn-tabs
  if impl(ghc < 7.10)
    ghc-options:     -XOverlappingInstances
  Ghc-prof-options:  -auto-all
